--- a/index.html
+++ b/index.html
@@ -1,87 +1,4 @@
-<style>
-  /* General Styles */
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #fafafa;
-    margin: 0;
-    padding: 20px;
-  }
-  article {
-    max-width: 800px;
-    margin: auto;
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  }
-  .byline {
-    color: #555;
-    font-style: italic;
-  }
-  .toc {
-    background-color: #f0f8ff;
-    padding: 10px;
-    border-radius: 6px;
-    margin-bottom: 20px;
-  }
-  .toc h2 {
-    color: #264653;
-    margin-top: 0;
-  }
-  .toc ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  .toc ul li a {
-    color: #0077b6;
-    text-decoration: none;
-  }
-  h1 {
-    color: #264653;
-    margin-bottom: 0;
-  }
-  h2 {
-    color: #2a9d8f;
-    background-color: #e9f5f2;
-    padding: 8px 12px;
-    border-radius: 4px;
-    margin-top: 40px;
-  }
-  h3 {
-    color: #0077b6;
-    margin-top: 20px;
-  }
-  p {
-    line-height: 1.6;
-    color: #333;
-  }
-  section:nth-of-type(even) {
-    background-color: #f9f9f9;
-    padding: 15px;
-    border-radius: 6px;
-  }
-  figure {
-    margin: 20px 0;
-    text-align: center;
-  }
-  figure img {
-    max-width: 100%;
-    border-radius: 4px;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-  }
-  figcaption {
-    color: #555;
-    font-size: 0.9em;
-    margin-top: 8px;
-  }
-  ol {
-    padding-left: 20px;
-  }
-  ol li {
-    margin-bottom: 8px;
-    color: #444;
-  }
-</style>
+<link rel="stylesheet" href="styles.css">
 
 <article>
   <header>
