--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <article>
         <header>
             <h1>Finite Life, Infinite Desires: How Perspective Shapes Beliefs About Mortality, the Afterlife, and the Pursuit of a Better Existence</h1>
-            <p class="byline">ENG 102-2531W | Professor Adam Scott | May 8, 2025</p>
+            <p class="byline">Levi Atang | May 8, 2025</p>
             <nav class="toc">
                 <h2>Contents</h2>
                 <ul>
