Author: Levi Atang<

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         </nav>
     </header>
       
+        <section class="title">
+          <h1>
+            Finite Life, Infinite Desires: The Interplay of Mortality, Afterlife, Fantasies amd the Pursuit of a Better Existence
+          </h1>
+          <p>
+            Levi Atang | May 8, 2025
+          </p>
+        </section>
 
         <section id="introduction">
             <h2>Introduction</h2>
