--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
         <section class="title">
           <h1>
-            Finite Life, Infinite Desires: The Interplay of Mortality, Afterlife, Fantasies amd the Pursuit of a Better Existence
+            Finite Life, Infinite Desires: The Interplay of Mortality, Afterlife, Fantasies and the Pursuit of a Better Existence
           </h1>
           <p>
             Levi Atang | May 8, 2025
