--- a/index.html
+++ b/index.html
@@ -177,6 +177,17 @@
       window.addEventListener('scroll', setActiveLink);
   });
     </script>
+    <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const hamburger = document.querySelector('.hamburger');
+    const navLinks = document.querySelector('.nav-links');
+
+    hamburger.addEventListener('click', function () {
+      navLinks.classList.toggle('show');
+    });
+  });
+</script>
+
     
 </body>
 </html>
