--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
     <article>
       <header class="header">
-        <nav class="navbar">
-            <div class="logo">Finite Life</div>
-            <div class="hamburger" id="hamburger">&#9776;</div>
-            <ul class="nav-links" id="nav-links">
-                <li><a href="#introduction">Introduction</a></li>
-                <li><a href="#meaningless">Mortality</a></li>
-                <li><a href="#afterlife">Afterlife</a></li>
-                <li><a href="#fantasies">Fantasies</a></li>
-                <li><a href="#references">References</a></li>
-            </ul>
-        </nav>
-    </header>
+  <div class="navbar">
+    <div class="logo">Finite Life</div>
+    <div class="hamburger">&#9776;</div>
+  </div>
+
+  <ul class="nav-links">
+    <li><a href="#intro">Introduction</a></li>
+    <li><a href="#mortality">Mortality</a></li>
+    <li><a href="#afterlife">Afterlife</a></li>
+  </ul>
+</header>
+
       
         <section class="title">
           <h1>
